<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.atlanmod.commons</groupId>
        <artifactId>commons</artifactId>
        <version>1.0.6</version>
    </parent>

    <groupId>org.atlanmod.neoemf</groupId>
    <artifactId>neoemf</artifactId>
    <version>2.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>NeoEMF</name>
    <description>An EMF persistence layer</description>
    <url>https://neoemf.atlanmod.org</url>
    <inceptionYear>2013</inceptionYear>

    <scm>
        <connection>scm:git:https://github.com/atlanmod/NeoEMF.git</connection>
        <developerConnection>scm:git:https://github.com/atlanmod/NeoEMF.git</developerConnection>
        <url>https://github.com/atlanmod/NeoEMF</url>
    </scm>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/atlanmod/NeoEMF/issues</url>
    </issueManagement>

    <ciManagement>
        <system>travis</system>
        <url>https://travis-ci.org/atlanmod/NeoEMF</url>
    </ciManagement>

    <licenses>
        <license>
            <name>Eclipse Public License v2.0</name>
            <url>https://www.eclipse.org/legal/epl-2.0/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>neoemf-core</module>
        <module>neoemf-data</module>
        <module>neoemf-io</module>
        <module>neoemf-utils</module>
        <module>neoemf-utils/p2</module>
        <module>neoemf-tests</module>
    </modules>

    <developers>
        <developer>
            <name>Amine Benelallam</name>
            <id>amine.benelallam</id>
            <email>amine.benallam@gmail.com</email>
            <roles>
                <role>admin</role>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
        <developer>
            <name>Gerson Sunyé</name>
            <id>gerson.sunye</id>
            <email>sunye@protonmail.com</email>
            <roles>
                <role>admin</role>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
        <developer>
            <name>Gwendal Daniel</name>
            <id>gwendal.daniel</id>
            <email>gwendal.daniel@gmail.com</email>
            <roles>
                <role>admin</role>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
        <developer>
            <name>Abel Gómez</name>
            <id>abel.gomez</id>
            <email>abel.gomez-llana@inria.fr</email>
            <roles>
                <role>admin</role>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
        <developer>
            <name>Yoann Vernageau</name>
            <id>yoann.vernageau</id>
            <email>yoann.vernageau@inria.fr</email>
            <roles>
                <role>admin</role>
                <role>developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
    </developers>

    <properties>
        <argLine.global>-Xmx2g --illegal-access=warn --illegal-access=permit --add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine.global>
        <commons.version>1.0.6</commons.version>
        <emf.version>[2.15.0,)</emf.version>
        <xtext.version>2.25.0</xtext.version>
        <xcore.version>[1.15.0,)</xcore.version>
        <jdk.version>11</jdk.version>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
        <!-- New properties -->
        <!--
            Guava versions > 23 removes the method:
            'void com.google.common.util.concurrent.Futures.addCallback(ListenableFuture, FutureCallback)'
            needed by Hadoop's  hdfs-server
        -->
        <guava.version>23.6-jre</guava.version>
        <jdk.module.illegalAccess>deny</jdk.module.illegalAccess>
        <junit.version>5.7.1</junit.version>
    </properties>

    <dependencyManagement>

        <dependencies>

            <!-- Commons -->

            <dependency>
                <groupId>org.atlanmod.commons</groupId>
                <artifactId>commons-core</artifactId>
                <version>${commons.version}</version>
            </dependency>

            <!-- EMF -->

            <dependency>
                <groupId>org.eclipse.emf</groupId>
                <artifactId>org.eclipse.emf.common</artifactId>
                <version>${emf.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.emf</groupId>
                <artifactId>org.eclipse.emf.ecore</artifactId>
                <version>${emf.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.emf</groupId>
                <artifactId>org.eclipse.emf.ecore.xmi</artifactId>
                <version>${emf.version}</version>
            </dependency>

            <!-- Test -->

            <dependency>
                <groupId>org.atlanmod.commons</groupId>
                <artifactId>commons-core</artifactId>
                <version>${commons.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>

            <!-- General purpose libraries -->

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Additional dependencies for JDK 11 -->
        <!-- TODO: check if really needed -->

        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>

        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.2.2</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>3.0.0</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.5.0</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>deploy</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <serverId>ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>5.1.2</version>
                    <extensions>true</extensions>
                    <configuration>
                        <instructions>
                            <Bundle-Version>${project.version}</Bundle-Version>
                            <Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
                            <Import-Package/>
                            <Embed-Dependency>
                                <!-- Inherited -->
                                *;
                                scope=compile|runtime;
                                type=!pom;
                                groupId=!${project.groupId}|org.atlanmod.commons|org.eclipse.emf
                            </Embed-Dependency>
                            <Embed-Transitive>true</Embed-Transitive>
                        </instructions>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <compilerArgs>
                            <!--<arg>-Xlint:all</arg>-->
                        </compilerArgs>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.6</version>
                    <configuration>
                        <excludes>
                            <exclude>**/tests/*</exclude>
                        </excludes>
                    </configuration>
                </plugin>

                <plugin>
                    <!-- `deploy-javadoc` profile comes in addition to this configuration -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <overview>overview.html</overview>
                        <groups>
                            <group>
                                <title>Core</title>
                                <packages>fr.inria.atlanmod.neoemf*</packages>
                            </group>
                            <group>
                                <title>I/O</title>
                                <packages>fr.inria.atlanmod.neoemf.io*</packages>
                            </group>
                            <group>
                                <title>In-memory (default)</title>
                                <packages>fr.inria.atlanmod.neoemf.data.im*</packages>
                            </group>
                            <group>
                                <title>Blueprints</title>
                                <packages>fr.inria.atlanmod.neoemf.data.blueprints*</packages>
                            </group>
                            <group>
                                <title>Blueprints Neo4j</title>
                                <packages>fr.inria.atlanmod.neoemf.data.blueprints.neo4j*</packages>
                            </group>
                            <group>
                                <title>MapDB</title>
                                <packages>fr.inria.atlanmod.neoemf.data.mapdb*</packages>
                            </group>
                            <group>
                                <title>BerkeleyDB</title>
                                <packages>fr.inria.atlanmod.neoemf.data.berkeleydb*</packages>
                            </group>
                            <group>
                                <title>HBase</title>
                                <packages>fr.inria.atlanmod.neoemf.data.hbase*</packages>
                            </group>
                            <group>
                                <title>MongoDB (beta)</title>
                                <packages>fr.inria.atlanmod.neoemf.data.mongodb*</packages>
                            </group>
                        </groups>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <!--
                        Avoid JDK11 reflexive access warning from FST
                        -->
                        <argLine>
                            --illegal-access=permit
                            --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            --add-opens java.base/java.math=ALL-UNNAMED
                            --add-opens java.base/java.net=ALL-UNNAMED
                            --add-opens java.base/java.text=ALL-UNNAMED
                            --add-opens java.base/java.util=ALL-UNNAMED
                            --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                            --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                            --add-opens java.base/javax.crypto=ALL-UNNAMED
                            --add-opens java.base/java.io=ALL-UNNAMED
                        </argLine>
                        <excludedGroups>slowest</excludedGroups>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonatype.plugins</groupId>
                    <artifactId>nexus-staging-maven-plugin</artifactId>
                    <version>1.6.8</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>1.6</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>

        <!-- A profile to manage Javadoc dependencies (EMF,...) -->
        <profile>
            <id>deploy-javadoc</id>
            <properties>
                <skipTests>true</skipTests>
            </properties>
            <build>
                <pluginManagement>
                    <plugins>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>3.2.0</version>
                            <configuration>
                                <excludePackageNames>
                                    fr.inria.atlanmod.neoemf.tests*;
                                </excludePackageNames>
                                <links>
                                    <link>https://atlanmod.github.io/Commons/releases/latest/doc/</link>
                                    <link>http://download.eclipse.org/modeling/emf/emf/javadoc/2.11/</link>
                                </links>
                            </configuration>
                        </plugin>

                    </plugins>
                </pluginManagement>
            </build>
        </profile>

        <!-- A profile to use snapshots -->
        <profile>
            <id>allow-snapshots</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <repositories>
                <repository>
                    <id>ossrh-snapshots</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                    <releases>
                        <enabled>false</enabled>
                    </releases>
                    <snapshots>
                        <enabled>true</enabled>
                        <updatePolicy>always</updatePolicy>
                        <checksumPolicy>ignore</checksumPolicy>
                    </snapshots>
                </repository>
            </repositories>
        </profile>

        <!-- A profile to deploy artifacts on OSS Sonartype -->

        <profile>
            <id>deploy-artifacts</id>
            <properties>
                <gpg.executable>gpg</gpg.executable>
                <skipTests>true</skipTests>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
